FinalProj/src/objects/TestToUser__c.object
<CustomObject>
    <fields>
        <fullName>Result__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>Result</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <referenceTo>Test__c</referenceTo>
        <relationshipLabel>Test Users</relationshipLabel>
        <relationshipName>UserTests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test User</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Test User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>